fixed monospace font issue on mobile

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,5 +1,7 @@
 @import url(http://fonts.googleapis.com/css?family=Source+Code+Pro:600|Source+Sans+Pro:400,400italic,600);
 
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,600);
+
 body {
 	background-color: #4b4b4b;
 	color: #fff;
@@ -42,6 +44,10 @@ h1 {
 p {
 	margin: 10px 0;
 	line-height: 20px;
+}
+
+b, strong {
+	font-weight: 600;
 }
 
 /* main.html */
@@ -94,7 +100,7 @@ roll {
 	padding: 0 3px;
 	color: #2c9fab;
 	font-family: 'Source Code Pro', monospace;
-	font-weight: bold;
+	font-weight: 600;
 }
 
 .spells {
